# GPT-talker

./: .env.example  README.md  SDK_checker.py  config.py  db.py  gemini_client.py  index.html  main.py  pyproject.toml  request.db  requirements.txt
